--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             </li>
             <li>git commit -m "add a meaning full comment"</li>
             <li>git push</li>
+            <li>Change</li>
         </ul>
     </div>
 </body>
