--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
             <li>git commit -m "add a meaning full comment"</li>
             <li>git push</li>
             <li>Change</li>
+
         </ul>
+    </div>
+    <div>
+        <h1>This is secound computer project</h1>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui voluptas odio repellendus quae praesentium consequuntur autem tenetur, minus porro incidunt dolores. Cupiditate, harum. Quisquam eligendi molestiae alias corrupti, perspiciatis quia aut commodi labore minima quae autem sit delectus nobis voluptatibus deserunt reprehenderit sunt, inventore dicta? Reprehenderit omnis quam rem et eos illum itaque vitae enim esse, exercitationem excepturi libero placeat provident dolorum! Distinctio ipsa modi quia voluptates eligendi maiores incidunt sapiente culpa omnis voluptatum. Sint, perferendis repellat atque quidem esse sed, tenetur at et expedita nemo molestiae dolorem cumque aliquam facere, assumenda id velit eligendi non voluptates ad suscipit ipsam!
+
+        </p>
     </div>
 </body>
 </html>
