--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet nam odit tempora, ipsa quos magnam nihil aperiam consequatur obcaecati velit dicta blanditiis alias ipsam totam eius laudantium doloribus dolorum. 
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero sit vitae velit, doloribus, et est, cupiditate tenetur autem quasi voluptas dolores libero cumque voluptatem debitis ad tempora alias dolore ex.
     </p>
+    <div>
+        <h1>This is third project</h1>
+        <h2>this made me easyer</h2>
+        <h3>I will try again</h3>
+        
+    </div>
 
 </body>
 </html>
