--- a/index.html
+++ b/index.html
@@ -40,6 +40,16 @@
         <h3>I will try again</h3>
         
     </div>
+    <div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis harum laborum, sequi itaque maxime consequatur enim vel dolorem ex sit quibusdam molestiae natus non. Nihil temporibus porro consequuntur obcaecati corrupti.</p>
+        <h5>this is heading</h5>
+        <ul>
+            <li>korin sofiq</li>
+
+        </ul>
+        <img src="download.jpg">
+        <img src="IMG_20171223_132903_8CS.jpg">
+    </div>
 
 </body>
 </html>
